# yew_web_worker_borrowmut_panic

./: Cargo.toml
src/: lib.rs  main.rs  native_worker.rs  web_worker_agent.rs
