[package]
name = "yew_web_worker_borrowmut_panic"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
log = "0.4.8"
web_logger = "0.2.0"
serde = "1.0.104"