[package]
name = "yew_web_workerborrowmut_panic"
version = "0.1.0"
authors = ["Henry Zimmerman"]
edition = "2018"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "native_worker"
path = "src/bin/native_worker.rs"

[dependencies]
log = "0.4"
web_logger = "0.1"
serde = "1.0"
serde_derive = "1.0"
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
